# Asteroids

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: asteroid.h  bullet.h  entity.h  game.h  global.h  physics.h  player.h
src/: asteroid.cpp  bullet.cpp  game.cpp  main.cpp  physics.cpp  player.cpp
